Fix for fieldset spacing

--- a/demos/borderradius-fun/styles/s.css
+++ b/demos/borderradius-fun/styles/s.css
@@ -92,7 +92,7 @@ form{
 
 form > fieldset{
     padding:0;
-    margin: 0 0 .1em 0;
+    margin: 0;
     position:relative;
     border:none;
 }
@@ -164,7 +164,7 @@ fieldset#advanced, fieldset#basic{
 
 fieldset fieldset{
     margin: -1.6em .5em .5em .5em;
-    padding: 0em 1em 0 1em;
+    padding: 0em 1em 1em 1em;
     position:relative;
     background:#eee;
     clear:both;
@@ -173,12 +173,12 @@ fieldset fieldset{
 }
 
 fieldset fieldset legend{
-    padding: 3em 0 .5em 0;
+    padding: 3em 0 0 0;
     font-weight:bold;
 }
 
 fieldset#advanced{
-    margin-top:-1.3em;
+    margin-top:-2em;
 }
 
 form #buttons{
@@ -186,7 +186,7 @@ form #buttons{
 }
 
 form p{
-    margin:0 0 1em 0;
+    margin:0;
     padding:0;
 }
 
